assets/styles/styles.css
/* STYLES HTML BACKGROUND DARK GREY */
/* MAKES SURE SCROLL BAR DOESN'T APPEAR */
html {
  background: #1f2126;
  overflow: hidden;
}

/* STYLES HEADER/LOGO SECTION DARK GREY AND SET FONT CLASS */
.is-header {
  background-color: #1f2126;
  color: white;
  font-family: "Raleway", sans-serif;
  font-size: 36px;
  margin-bottom: -30px;
}

/* SET COLOR OF THE "buddy" IN THE LOGO AREA */
span {
  color: orangered;
}

/* STYLES AND POSITIONS CARD HOLDING THE MPG/FUEL/RUNNING COST INFORMATION */
.mpgbox {
  position: absolute;
  right: 8px;
  top: 8px;
  z-index: 5;
  background-color: rgba(255, 255, 255, 0.7);
}

/* STYLES AND POSITIONS CARD HOLDING THE CALORIE BURN INFORMATION */
.calbox {
  position: absolute;
  z-index: 5;
  background-color: rgba(255, 255, 255, 0.7);
  right: 8px;
  bottom: 8px;
}

/* STYLES THE MAP CONTAINING ELEMENT AND SETS IT AS THE POSITIONAL ANCHOR FOR ABSOLUTELY POSITIONED ELEMENTS */
.container {
  position: relative;
  margin-top: -10px;
  height: 90vh;
  padding-bottom: 0;
}

/* STYLES BODY AND ADDS DARK GREY BACKGROUND */
body {
  margin: 0;
  padding: 0;
  background: #1f2126;
  box-sizing: border-box;
}

/* STYLES MAP -- WIDTHS AND HEIGHTS ARE RELATIVE TO THEIR CONTAINER */
#map {
  width: 100%;
  height: 100%;
}

/* HIDES CERTAIN ELEMENTS UNTIL THE COMMUTE BOX IS CHECKED/TOGGLED */
.boxChecked {
  display: none;
}

/* STYLES THE LIST ELEMENTS AND ADDS A SEMI-TRANSPARENT DARK GREY BACKGROUND. RGBA VALUES EQUIVALENT TO HEX DARK GREY USED ABOVE */
.content ul {
  list-style-type: none;
  background: rgba(31, 33, 38, 0.8);
  color: #fff;
  margin-left: 0px;
}

/* STYLES THE DYNAMICALLY ADDED CONTENT OF THE LIST */
.content ul span {
  font-weight: bold;
}

/* HANDLES DISPLAY FOR LIST ITEMS. REMOVED WHEN ACTIONS ARE TAKEN (ACTIONS DEFINED IN JS) */
.tripDisplay {
  display: none;
}

/* POSITIONS THE QUESTION MARK */
/* N.B. THE ELEMENT IN THE HTML IS <i> BUT IS REPLACED WITH <svg> ON PAGE LOAD */
svg.fa-question-circle {
  position: absolute;
  top: 10px; 
  right: 100px;
}

/* COLORS FONT OF HEADERS INSIDE THE MODAL */
.modal-content h2 {
  color: orangered;
}
/* SETS WIDTH OF MODAL AREA */
.modal-content {
  width: 1200px;
}

/* STYLE BACKGROUND OF COST CALCULATION BUTTON */
#calcButton {
  background: orangered;
}

